fix: 修复设备mcp工具调用错误问题